# cs-113

./: .gitignore  .gitmodules  README.md
.github/workflows/: CS-113.yml
assignments/: 1.20_HelloWorld  1.22_ASCIIArt  README.md  Team7_SimpleStatistics  genProject.py
assignments/0.0.0_HelloWorld/: CMakeLists.txt  Writeup.tex  main.cpp  run.sh  test.py
assignments/0.0.0_HelloWorld/include/: CMakeLists.txt  printhello.h
assignments/0.0.0_HelloWorld/src/: CMakeLists.txt  main.cpp  printhello.cpp
assignments/0.0.0_NameProject/: CMakeLists.txt  README.md  Writeup.tex  buildVars.py  run.sh  test.py
assignments/0.0.0_NameProject/include/: main.h
assignments/0.0.0_NameProject/src/: main.cpp
assignments/0.0.0_ProjectWithInputs/: run.sh  test.py
assignments/0.0.1_CoolProject2/: CMakeLists.txt
assignments/0.0_Template/: CMakeLists.txt  Writeup.tex  test.py
assignments/1.12_ASCIIArt/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.13_HelloWorld/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.14_Basics/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.15_InputOutput/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.16_HelloWorld/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.17_NoParking/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.18_RealEstate/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/1.19_AsciiArrow/: CMakeLists.txt  README.md  Writeup.tex
assignments/1.21_BasicOutput/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/2.11_ParsingDigits/: CMakeLists.txt  README.md  Writeup.tex
assignments/2.35_PaintingAWall/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/3.17_LeapYear/: CMakeLists.txt  README.md  Writeup.tex
assignments/3.18_VendingMachine/: CMakeLists.txt  README.md  Writeup.tex
assignments/3.19_Seasons/: CMakeLists.txt  README.md  Writeup.tex
assignments/4.15_RightTriangle/: CMakeLists.txt  README.md  Writeup.tex
assignments/4.16_HalfTriangle/: CMakeLists.txt  README.md  Writeup.tex
assignments/4.17_ConvertBinary/: CMakeLists.txt  README.md  Writeup.tex
assignments/5.10.1_Coinflip/: CMakeLists.txt  README.md  Writeup.tex
assignments/5.11_MilesToTrackLaps/: CMakeLists.txt  README.md  Writeup.tex
assignments/5.12_TrackLapsToMiles/: CMakeLists.txt  README.md  Writeup.tex
assignments/5.13_StepCounter/: CMakeLists.txt  README.md  Writeup.tex
assignments/5.2_MathFunctions/: CMakeLists.txt  README.md  Writeup.tex
assignments/ALM_Games/: CMakeLists.txt  README.md  Writeup.tex
assignments/ALM_Hypotenuse/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/ALM_MathLibraryFunctions/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/ALM_MergingFiles/: CMakeLists.txt  README.md  Writeup.tex  run.sh
assignments/ALM_WordJumble/: CMakeLists.txt  README.md  Writeup.tex  run.sh  words.txt
assignments/ActiveLearningModule-Loops/: ALM-Loops.md
assignments/Extra1_AnimatedHelloWorld/: CMakeLists.txt  README.md  Writeup.tex
assignments/Extra1_AnimatedHelloWorld/3d/: Text.blend
assignments/Extra1_AnimatedHelloWorld/cmake/: FindLIBIGL.cmake
assignments/Extra1_AnimatedHelloWorld/src/: asciiGraphicsTypes.h  loader.h  main.cpp
assignments/Midterm_TwoIntegers/: CMakeLists.txt  README.md  Writeup.tex
assignments/Midterm_WeightConverter/: CMakeLists.txt  README.md  Writeup.tex
assignments/Session1_BlockLetters/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session1_ThreeIntegersProblem/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session1_WelcomeMessage/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session2_CoinCalculator/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session2_CostOfApples/: CMakeLists.txt  README.md  Writeup.tex
assignments/Session2_PayIncrease/: CMakeLists.txt  README.md  Writeup.tex  run.sh  test.py
assignments/Session2_SimpleStatistics/: CMakeLists.txt  README.md  Writeup.tex  run.sh  test.py
assignments/Session2_SimpleStatistics/src/: main.cpp
assignments/Session3_Comparisons/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session3_LargestAndSmallest/: CMakeLists.txt  README.md  Writeup.tex  test.py
assignments/Session4_PiCalculation/: CMakeLists.txt  README.md  Writeup.tex
assignments/Session4_PiCalculation/src/: main.cpp
(+146 files in other folders)
